--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,16 @@
 .app {
   max-width: 80rem;
 }
+
+.content {
+  display: flex;
+}
+
+.detail {
+  /* grow shrink 1 1 공간이 충분하다면 늘어나도록 */
+  flex: 1 1 70%;
+}
+
+.list {
+  flex: 1 1 30%;
+}
